<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.lionel.imc.MainActivity"
    tools:showIn="@layout/activity_main">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/banner">

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/banner">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/banner">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_peso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_peso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_peso"
                    android:textSize="18dp"
                    android:numeric="decimal"
                    android:inputType="numberDecimal"
                    android:gravity="center" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_below="@+id/input_layout_peso"
                android:id="@+id/input_layout_altura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_altura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_altura"
                    android:textSize="18dp"
                    android:numeric="decimal"
                    android:inputType="numberDecimal"
                    android:gravity="center"/>

            </android.support.design.widget.TextInputLayout>

            <info.hoang8f.widget.FButton
                android:id="@+id/btn_Calcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_btn_CalcularIMC"
                android:textColor="@android:color/white"
                android:onClick="calcularImc"
                android:layout_gravity="left|top"
                android:minHeight="35dp"
                android:minWidth="140dp"
                fbutton:buttonColor="@color/fbutton_color_turquoise"
                fbutton:shadowColor="@color/fbutton_color_asbestos"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="5dp"
                fbutton:cornerRadius="5dp"
                android:layout_below="@+id/input_layout_altura" />



            <android.support.v7.widget.CardView
                android:id="@+id/card_viewImc"
                android:layout_gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                card_view:cardCornerRadius="2dp"
                card_view:contentPadding="10dp"
                android:layout_below="@+id/btn_Calcular">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                    <TextView
                        android:id="@+id/textViewImc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_alignParentTop="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <info.hoang8f.widget.FButton
                android:id="@+id/btn_PesoIdeal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_btn_PesoIdeal"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:onClick="calcularPesoIdeal"
                android:layout_gravity="left|top"
                android:minHeight="35dp"
                android:minWidth="140dp"
                fbutton:buttonColor="@color/fbutton_color_turquoise"
                fbutton:shadowColor="@color/fbutton_color_asbestos"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="5dp"
                fbutton:cornerRadius="5dp"
                android:layout_below="@+id/card_viewImc"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"/>

            <!--<android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                card_view:cardCornerRadius="2dp"
                card_view:contentPadding="10dp"
                android:layout_below="@+id/btn_PesoIdeal">

                <RelatiaveLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                    <TextView
                        android:id="@+id/textViewPesoIdeal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_alignParentTop="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>
                </RelatiaveLayout>
            </android.support.v7.widget.CardView>-->


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>